# homebrewdb

./: .gitignore  LICENSE  README.md
gtwriter/config/: config.json  realsense_intrinsics.txt
gtwriter/include/: configuration.h  frame.h  frame_model.h  io_utils.hpp  joint_scene.h  model.h  model_renderer.h  output_writer.h  renderer.h  rgbd_types.hpp  scene.h  sequence_composer.h  util.h
gtwriter/src/: CMakeLists.txt
gtwriter/src/cmake/: IncludePaths.cmake  LibPaths.cmake
gtwriter/src/model-info-writer/: CMakeLists.txt  main.cpp
gtwriter/src/scene-gt-writer/: CMakeLists.txt  main.cpp  model_renderer.cpp  output_writer.cpp  scene.cpp  sequence_composer.cpp
libqtoffscreenrenderer/include/: model.h  painter.h  renderer.h
libqtoffscreenrenderer/src/: CMakeLists.txt  main.cpp  model.cpp  painter.cpp  renderer.cpp
ppfshapematchinghalcon/: CMakeLists.txt
ppfshapematchinghalcon/include/: configuration.hpp
ppfshapematchinghalcon/src/: model_matching.cpp
refine_depth/: .gitignore  CMakeLists.txt
refine_depth/config/: board.yml
refine_depth/config2/: board.yml  dict.yml
refine_depth/include/: io_utils.hpp  marker_detector.hpp  rgbd_types.hpp
refine_depth/src/: main.cpp  marker_detector.cpp
refiner/: CMakeLists.txt
refiner/config/: config.json  intrinsics.txt  kinect2_intrinsics.txt  kinect_intrinsics.txt  primesense_intrinsics.txt
refiner/include/: configuration.h  configuration_parser.h  correspondence_finder.h  frame_payload.h  input_handler.h  io_utils.hpp  model.h  occlusion_handler.hpp  optimizer.h  painter.h  refiner.h  refiner_interface.h  renderer.h  rendering_helper.h  rgbd_types.hpp  util.h  vis_utils.h
refiner/src/: configuration_parser.cpp  correspondence_finder.cpp  input_handler.cpp  main.cpp  occlusion_handler.cpp  optimizer.cpp  refiner.cpp  rendering_helper.cpp  vis_utils.cpp
rgbd_capture/src/: CMakeLists.txt
rgbd_capture/src/app/: CMakeLists.txt
rgbd_capture/src/app/include/: rgbd_camera.h
rgbd_capture/src/app/src/: main.cpp
rgbd_capture/src/cmake/: IncludePaths.cmake  LibPaths.cmake
rgbd_capture/src/librgbdcapture/: CMakeLists.txt
rgbd_capture/src/librgbdcapture/include/: kinect_azure_camera.h  kinectv2_camera.h  math_tools.h  openni_camera.h  realsense_camera.h  rgbd_camera.h
rgbd_capture/src/librgbdcapture/src/: kinect_azure_camera.cpp  kinectv2_camera.cpp  openni_camera.cpp  realsense_camera.cpp  rgbd_camera.cpp
sdf_fusion/default_config/: dict.yml  primesense_intrinsics.txt
sdf_fusion/src/: CMakeLists.txt
sdf_fusion/src/aruco_sdffusion/: CMakeLists.txt
sdf_fusion/src/aruco_sdffusion/include/: configuration.hpp  configuration_parser.hpp  input_preprocessor.hpp  io_utils.hpp  marching_cubes.hpp  marker_detector.hpp  math_tools.h  pose_validator.hpp  reconstructor_3d.hpp  rgbd_types.hpp  sdf_fusion.hpp  types.hpp  utils.hpp  visualizer.hpp
sdf_fusion/src/aruco_sdffusion/src/: configuration.cpp  configuration_parser.cpp  input_preprocessor.cpp  main.cpp  marching_cubes.cpp  marker_detector.cpp  pose_validator.cpp  reconstructor_3d.cpp  sdf_fusion.cpp  types.cpp  visualizer.cpp
sdf_fusion/src/cmake/: IncludePaths.cmake  LibPaths.cmake
sdf_fusion/src/cmake/Modules/: FindOpenNI2.cmake
